# m2

./: .clang-format  .gitignore  .gitmodules  ADR.txt  AGENTS.md  BuildDependencies.cmake  CMakeLists.txt  CMakePresets.json  CMakeProject.h.in  Doc.txt  Doxyfile  Project.xml  README.md  TODO.txt  build-linux.sh  build-macos.sh  build.sh  cgame.sublime-project  mac_all.sh  posix_all.sh  web_all.sh  win_all.sh
common/: CMakeLists.txt
common/include/m2/common/: BuildOptions.h  Chrono.h  Constants.h  Error.h  Graph.h  Math.h  Meta.h  SpinLock.h  String.h
common/src/: Error.cc  FileSystem.cc  Graph.cc  Math.cc  Semaphore.cc  SpinLock.cc  String.cc
common/src/containers/: Cache.cc  MapF.cc  Pool.cc
common/src/math/: Bit.cc  Exact.cc  Float.cc  Gaussian.cc  Hash.cc  Line.cc  Rational.cc  Real.cc  RectE.cc  RectF.cc  RectI.cc  VecE.cc  VecF.cc  VecI.cc
common/src/math/composites/: Rect.cc  Vec.cc
common/src/rng/: Distribution.cc  Rng.cc  XsrRng.cc
common/src/video/: Color.cc
game/: CMakeLists.txt
game/CuZn/: CMakeLists.txt  README.txt
game/CuZn/include/cuzn/: Action.h  Build.h  ConsumingBeer.h  ConsumingCoal.h  ConsumingIron.h  Detail.h  Market.h  Scoring.h  Ui.h
game/CuZn/include/m2g/: Proxy.h  ProxyEx.h
game/CuZn/pb/: m2g_AnimationType.proto  m2g_AttributeType.proto  m2g_CardType.proto  m2g_ConstantType.proto  m2g_Interaction.proto  m2g_ItemType.proto  m2g_Layers.proto  m2g_Network.proto  m2g_ObjectType.proto  m2g_ResourceType.proto  m2g_SongType.proto  m2g_SpriteType.proto  m2g_VariableType.proto
game/CuZn/src/: Action.cc  Build.cc  Coal.cc  ConsumingBeer.cc  ConsumingCoal.cc  ConsumingIron.cc  Detail.cc  Market.cc  Proxy.cc  ProxyUi.cc  Scoring.cc  Ui.cc
game/CuZn/src/detail/: ActionNotification.cc  Build.cc  Graphic.cc  Income.cc  Liquidate.cc  Market.cc  Network.cc  Scout.cc  SetUp.cc
game/CuZn/src/journeys/: BuildJourney.cc  Common.cc  DevelopJourney.cc  LiquidationJourney.cc  LoanJourney.cc  NetworkJourney.cc  PassJourney.cc  ScoutJourney.cc  SellJourney.cc
game/CuZn/src/object/: CanalOrRailroad.cc  Factory.cc  GameStateTracker.cc  HumanPlayer.cc  Market.cc  MarketTracker.cc  Merchant.cc  Road.cc  Tile.cc
game/CuZn/src/ui/: ActionNotification.cc  CanalEraResult.cc  Cards.cc  Client.cc  CustomHud.cc  Detail.cc  GameResult.cc  IndustrySelection.cc  LeftHud.cc  MainMenu.cc  Market.cc  MouseHover.cc  Notification.cc  PauseMenu.cc  RightHud.cc  Selection.cc  Server.cc  StatusBar.cc  Tiles.cc
game/JRPG/: README.txt
game/LockstepSkeleton/: CMakeLists.txt  README.md
game/LockstepSkeleton/include/m2g/: Proxy.h  ProxyEx.h
game/LockstepSkeleton/pb/: m2g_ObjectType.proto
game/LockstepSkeleton/src/: Proxy.cc
game/LockstepSkeleton/src/objects/: Player.cc
game/MINE/: CMakeLists.txt  README.txt
game/MINE/include/m2g/: Controls.h  Interaction.h  Object.h  Proxy.h  ProxyEx.h  Ui.h
game/MINE/pb/: InteractionType.proto  ItemType.proto  ObjectType.proto  ResourceType.proto  SpriteType.proto  m2g_GroupType.proto  m2g_ItemType.proto  m2g_KeyType.proto  m2g_ObjectType.proto  m2g_SongType.proto  m2g_VariableType.proto
game/MINE/src/: Controls.cc  Group.cc  Object.cc  Proxy.cc  ProxyUi.cc  Ui.cc
game/MINE/src/component/: Defense.cc  Offense.cc
game/MINE/src/object/: Blacksmith.cc  Dwarf.cc
game/MOON/: CMakeLists.txt  README.txt
game/PINBALL/: CMakeLists.txt
game/PINBALL/include/m2g/: Proxy.h  ProxyEx.h
game/PINBALL/include/pinball/: Objects.h  Pinball.h  Simulation.h
game/PINBALL/pb/: Simulation.proto  m2g_AttributeType.proto  m2g_GroupType.proto  m2g_Interaction.proto  m2g_ItemType.proto  m2g_KeyType.proto  m2g_Network.proto  m2g_ObjectType.proto  m2g_SongType.proto  m2g_SpriteType.proto
game/PINBALL/src/: Proxy.cc  Simulation.cc
game/PINBALL/src/objects/: Animal.cc  Ball.cc  BallLauncherSensor.cc  BumperSensor.cc  CircularBumper.cc  Door.cc  DropGate.cc  Edge.cc  Flipper.cc  GenericBallSensor.cc  HeaterSwitchSensor.cc  LightSwitchSensor.cc  Platform.cc  PlatformEntrySensor.cc  PlatformExitSensor.cc  Player.cc  TriangleTrap.cc  Wall.cc  WaterSprinklerSensor.cc
game/RPG/: CMakeLists.txt  Doc.txt  LevelDesign.txt  README.txt
game/RPG/include/game/: ARPG_Cfg.hh  component.hh  game_proxy.hh
game/RPG/include/m2g/: Controls.h  Group.h  Interaction.h  Object.h  Proxy.h  ProxyEx.h  Sprite.h  SpriteBlueprint.h  SpriteID.h  SpriteId.h
game/RPG/include/rpg/: Attribute.h  Character.h  Consumable.h  ConsumableBlueprint.h  Context.h  Data.h  Defs.h  Detail.h  ExplosiveWeapon.h  Graphic.h  Item.h  LevelBlueprint.h  MeleeWeapon.h  Objects.h  Physics.h  PowerUp.h  RangedWeapon.h  UseCard.h  UseItem.h
game/RPG/pb/: AnimationStateType.proto  AnimationType.proto  AttributeType.proto  Enemy.proto  GroupType.proto  InteractionType.proto  ItemType.proto  ObjectParameters.proto  ObjectType.proto  Progress.proto  ResourceType.proto  SongType.proto  SoundType.proto  SpriteType.proto  m2g_AnimationStateType.proto  m2g_AnimationType.proto  m2g_CardType.proto  m2g_ConstantType.proto  m2g_GroupType.proto  m2g_Interaction.proto  m2g_ItemType.proto  m2g_KeyType.proto  m2g_Layers.proto  m2g_ObjectType.proto  m2g_ResourceType.proto  m2g_SpriteType.proto  m2g_VariableType.proto
game/RPG/src/: ARPG_Cfg.cc  ARPG_Object.hh  ARPG_component.cc  ARPG_game_proxy.cc  Context.cc  Controls.cc  Detail.cc  Graphic.cc  Group.cc  LevelBlueprint.cc  Object.cc  Proxy.cc  ProxyUi.cc  SpriteBlueprint.cc  Ui.cc  UseCard.cc  UseItem.cc
game/RPG/src/Automata/: AutomatonAiChase.cc  AutomatonAiChase.hh  (+2 more)
game/RTS/: README.txt
game/SIM/: CMakeLists.txt  README.txt
lib/: CMakeLists.txt
lib/SDL2/: CMakeLists.txt
lib/SDL2_image/: CMakeLists.txt
lib/SDL2_ttf/: CMakeLists.txt
lib/SDL3/: CMakeLists.txt
lib/SDL3_image/: CMakeLists.txt
lib/SDL3_ttf/: CMakeLists.txt
lib/SDL_gpu/: CMakeLists.txt
lib/box2d/: CMakeLists.txt
lib/expected/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/genORM/: CMakeLists.txt
lib/googletest/: CMakeLists.txt
lib/png/: CMakeLists.txt
lib/protobuf/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt
lib/z/: CMakeLists.txt
src/: AI.c  (+254 more)
(+1486 files in other folders)
